# qsugar

./: CMakeLists.txt  QSugar-test.cpp  QSugar.cpp  QSugar.hpp
include/: QSugar.hpp
src/: CMakeLists.txt  QSugar.cpp
tests/: CMakeLists.txt  QSugar-test.cpp
